<resources>
    <string name="app_name">EcoSort</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_history">Historique de scan</string>
    <string name="menu_stats">Statistiques</string>
    <string name="menu_tips">Conseils de tri</string>
    <string name="menu_settings">Paramètres</string>
    <string name="titre_header">EcoSort</string>
    <string name="slogan">Vers un tri responsable 🌿"</string>
    <string name="scan">Scanner</string>
    <string name="base_url">https://5475-2a01-cb04-d5c-4e00-599a-3bda-1119-a5af.ngrok-free.app/</string>
    <string name="camera">Camera Preview</string>
    <string name="upload">Upload</string>
    <string name="menu_feedback">Feedback</string>
    <string name="demarrage">Développement durable, recyclons pour un avenir meilleur !</string>
    <!-- Obligatoire pour le toggle -->
    <string name="open_drawer">Ouvrir le menu</string>
    <string name="close_drawer">Fermer le menu</string>
    <string name="gestion_des_d_chets">Gestion des déchets</string>
</resources>