<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile"
            android:icon="@drawable/ic_person" />

        <item
            android:id="@+id/nav_history"
            android:title="@string/menu_history"
            android:icon="@drawable/ic_history" />

        <item
            android:id="@+id/nav_stats"
            android:title="@string/menu_stats"
            android:icon="@drawable/ic_stats" />

        <item
            android:id="@+id/nav_tips"
            android:title="@string/menu_tips"
            android:icon="@drawable/ic_tips" />
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/menu_feedback"
            android:icon="@drawable/ic_feedback" />


        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings" />

    </group>

</menu>